# cppu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  out.txt
.github/workflows/: release.yml
src/: cli.rs  main.rs  runner.rs
wix/: main.wxs
